--- a/.github/workflows/fetch-nfl-scores.yml
+++ b/.github/workflows/fetch-nfl-scores.yml
@@ -20,5 +20,6 @@ jobs:
         run: |
           git config --global user.name "Mr. Robot"
           git config --global user.email "dylanhodge@users.noreply.github.com"
-          git commit -am "Automated score publication"
+          git add .
+          git commit -m "Automated score publication"
           git push
