--- a/.github/workflows/fetch-nfl-scores.yml
+++ b/.github/workflows/fetch-nfl-scores.yml
@@ -2,7 +2,7 @@ name: fetch-nfl-scores
 on:
   schedule:
     - cron: '0/15 6-18 * 1,9,10,11,12 0,1,4,6'
-    - cron: '0 0/8 * 1,8,9,10,11,12 *'
+    - cron: '0 0 * 1,8,9,10,11,12 *'
   workflow_dispatch:
 jobs:
   fetch-nfl-scores:
