--- a/.github/workflows/fetch-nfl-scores.yml
+++ b/.github/workflows/fetch-nfl-scores.yml
@@ -22,5 +22,7 @@ jobs:
           git config --global user.name "Mr. Robot"
           git config --global user.email "dylanhodge@users.noreply.github.com"
           git add .
-          git commit -m "Automated score publication"
-          git push
+          if ! git diff-index --quiet HEAD; then
+            git commit -m "Automated score publication"
+            git push
+          fi
