--- a/.github/workflows/fetch-nfl-scores.yml
+++ b/.github/workflows/fetch-nfl-scores.yml
@@ -12,6 +12,8 @@ jobs:
         with:
           python-version: '3.10'
       - name: Generate weekly files
+        env: 
+          WMH_API_KEY: ${{ secrets.WMH_API_KEY }}
         run: |
           pip install -r requirements.txt
           python fetch-nfl-scores.py
